LeetCode_0040