@@ -10,12 +10,13 @@ import java.util.*;
 public class Solution0040 {
     public static void main(String[] args) {
         Solution0040 obj = new Solution0040();
-        System.out.println(obj.combinationSum2(new int[]{10, 1, 2, 7, 6, 1, 5}, 8));
+//        System.out.println(obj.combinationSum2(new int[]{10, 1, 2, 7, 6, 1, 5}, 8));
+        System.out.println(obj.combinationSum2(new int[]{10, 1, 7, 1}, 8));
     }
 
     //ArrayDeque没有ArrayList速度快
     List<List<Integer>> ans = new ArrayList<>();
-    Deque<Integer> path = new ArrayDeque<>();
+    List<Integer> path = new ArrayList<>();
 
     public List<List<Integer>> combinationSum2(int[] candidates, int target) {
         Arrays.sort(candidates);
@@ -29,8 +30,7 @@ public class Solution0040 {
     }
 
     /**
-     * 每一个元素可以重复使用，考虑了所有的候选数，因此出现了重复的列表。
-     * 从每一层的第 22 个结点开始，都不能再搜索产生同一层结点已经使用过的 candidate 里的元素
+     * 每个元素都只能用一次，{7,1}{1,7}就算是用不同下标的1，也算是同一序列
      */
     public void backtrack(int start, int n, int target, int[] candidates) {
         if (target < 0) {
@@ -38,13 +38,23 @@ public class Solution0040 {
         }
         if (target == 0) {
             ans.add(new ArrayList<>(path));
+            return;
         }
 
-        //元素可以重复，下次添加元素，还是要从当前元素开始，所以回溯方法中i没有加1
+
         for (int i = start; i < n; i++) {
-            path.offer(candidates[i]);
+            // 剪枝，如果target - candidates[i] < 0，那target减去第i+1，i+2时,也都会小于0
+            if (target - candidates[i] < 0) {
+                break;
+            }
+            //去除重复
+            if (i > start && candidates[i - 1] == candidates[i]) {
+                continue;
+            }
+            path.add(candidates[i]);
+            //元素只能用一次，下次添加元素，还是要从下一元素开始，所以回溯方法中i加1
             backtrack(i + 1, n, target - candidates[i], candidates);
-            path.removeLast();
+            path.remove(path.size() - 1);
         }
 
     }
